INCLUDE_DIRECTORIES(${INCLUDE_DIR})

ADD_DEFINITIONS(-D_UNICODE)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/Bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/Lib)
SET(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR}/Lib)

SET(METAZION_INCLUDE_DIR $ENV{METAZION})
SET(METAZION_LIBRARY_DIR $ENV{METAZION}/Lib)

MESSAGE(STATUS ${METAZION_INCLUDE_DIR})
MESSAGE(STATUS ${METAZION_LIBRARY_DIR})

INCLUDE_DIRECTORIES(${METAZION_INCLUDE_DIR})
LINK_DIRECTORIES(${METAZION_LIBRARY_DIR})

FILE(GLOB CODE_HEADERS "./*.hpp")
FILE(GLOB CODE_SOURCES "./*.cpp")

ADD_EXECUTABLE(Test
    ${CODE_HEADERS}
    ${CODE_SOURCES}
)

IF(PRODUCT_INSTALL)
    INSTALL(TARGETS Test
    RUNTIME DESTINATION ${BIN_DIR}
    LIBRARY DESTINATION ${LIB_DIR}
    ARCHIVE DESTINATION ${LIB_DIR})
ENDIF(PRODUCT_INSTALL)

# These are used to create visual studio folders.
SOURCE_GROUP(Header FILES ${CODE_HEADERS})
SOURCE_GROUP(Source FILES ${CODE_SOURCES})